@@ -1,0 +1,29 @@
+[Desktop Entry]
+Type=Application
+Name=Cantata
+GenericName=Music Player Client
+GenericName[bs]=Muzički player klijent
+GenericName[da]=Musikafspiller-klient
+GenericName[de]=Grafischer Musik Player Client
+GenericName[es]=Cliente de reproducción de música
+GenericName[fi]=Musiikkisoitinasiakas
+GenericName[fr]=Client de lecture de musique
+GenericName[gl]=Cliente de reprodución de música
+GenericName[hu]=Zenelejátszókliens
+GenericName[jv]=Musik Player Client
+GenericName[ko]=음악 플레이어 클라이언트
+GenericName[ms]=Klien Pemain Musik
+GenericName[nb]=Musikkavspiller-klient
+GenericName[oc]=Client de lectura de musica
+GenericName[pl]=Odtwarzacz muzyki
+GenericName[pt]=Reprodutor de música
+GenericName[pt_BR]=Reprodutor Multimídia
+GenericName[ru]=Клиент музыкального проигрывателя
+GenericName[sq]=Clienti player muzike
+GenericName[tr]=Muzik Çalıcı İstemcisi
+Icon=cantata
+Exec=cantata %U
+Categories=Qt;KDE;AudioVideo;Player;
+X-DBUS-StartupType=Unique
+X-DBUS-ServiceName=mpd.cantata
+Keywords=Music;MPD;
